2006-06-03 [wwp]	0.9.3cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.9.3

	* src/plugin.c
		Updated sylpheed-claws product name.

	* src/tools/matcherrc2perlfilter.pl
		Updated sylpheed-claws product name (matching this plugin doc).

2006-05-07 [holger]	0.9.2

	* src/perl_plugin.c
		Make sure the filtering hook is not called with
		a NULL message. Fixes possible crasher.
	
2006-04-07 [colin] 	0.9.1

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-03-18 [holger]	0.9

	0.9 released
	
2006-02-25 [holger]     0.8.1

	* src/perl_gtk.c
		Check mainwindow before using it
	* src/perl_plugin.c
		Fix access to "References" header (and a few others)
		Forward and redirect in batch mode
		Remove double plugin version information
		Update required Sylpheed-Claws version
	* sc_perl.pod
		Update documentation
	
2006-02-23 [wwp]	0.8

	* src/perl_plugin.c
		updated to reflect latest changes in compose.c API.
	* ChangeLog
	* configure.ac
		bumped version to 0.8

2006-02-22 [wwp]	0.7

	* src/perl_plugin.c
		fix plugin prefs loading
	* Changelog
	  configure.ac
		bumped version to 0.7

2005-12-15 [paul]	0.6

	* src/perl_plugin.c
		Add plugin_version()

2005-12-07 [colin]      0.5

	* src/perl_plugin.c
		Add plugin_licence()
	
2005-10-06 [paul]	0.4

	* configure.ac
		bump up required Claws version
	* src/perl_plugin.c
		msginfo-threadscore no longer exists, remove it
		Patch by Ricardo Mones Lastra

2005-05-09 [holger]	0.3

	0.3 released

2005-05-06 [holger]	0.2cvs13

	* README
	* src/perl_plugin.h
	* src/perl_plugin.c
	* src/perl_gtk.h			*** NEW FILE ***
	* src/perl_gtk.c			*** NEW FILE ***
		Why not use the logwindow for logging?
		Add entry in the tools menu to edit filter rules
		(via an external editor)

2005-04-09 [holger]	0.2cvs12

	* src/perl_plugin.c
		Make critical warning messages more obvious.

2005-04-06 [holger]	0.2cvs11

	* src/perl_plugin.c
		Open logfile only as needed.