@@ -4,8 +4,7 @@ plugin_LTLIBRARIES = perl_plugin.la
 
 perl_plugin_la_SOURCES = \
 	perl_plugin.c perl_plugin.h \
-	perl_gtk.c perl_gtk.h \
-	plugin_version.h
+	perl_gtk.c perl_gtk.h
 
 perl_plugin_la_LDFLAGS = \
 	-avoid-version -module
@@ -19,6 +18,3 @@ AM_CPPFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(GTK_CFLAGS) \
 	$(PERL_CFLAGS)
-
-EXTRA_DIST = \
-	plugin_version.h.in
